fix alignment on detail

--- a/client/src/views/Detail/Detail.module.css
+++ b/client/src/views/Detail/Detail.module.css
@@ -12,6 +12,10 @@
   background-color: white;
 }
 
+.countryInfo {
+  text-align: left;
+}
+
 .error {
   color: red;
   margin-bottom: 1rem;
